Fix alignment in investor distribution chart and margin top on subtitle

--- a/src/scss/_charts.scss
+++ b/src/scss/_charts.scss
@@ -44,7 +44,6 @@ $pie_chart_diameter: 100%; // NOTE: has to be equal to value in js passed to d3
 .holder_item {
     &__container {
         display: flex;
-        padding: 0 12px;
         gap: 30px;
         box-sizing: border-box;
         height: 32px;
