--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -604,6 +604,10 @@ p {
     flex-direction: column;
 }
 
+.nowrap {
+    white-space: nowrap;
+}
+
 .align-start {
     align-items: flex-start;
 }
